--- a/OpenRPA.PS/OpenRPA.PS.csproj
+++ b/OpenRPA.PS/OpenRPA.PS.csproj
@@ -7,6 +7,9 @@
     <Version>1.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.PowerShell.5.1.ReferenceAssemblies" Version="1.0.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\OpenRPA.Interfaces\OpenRPA.Interfaces.csproj" />
     <ProjectReference Include="..\OpenRPA.Net\OpenRPA.Net.csproj" />
   </ItemGroup>
